feat: Added audio playback and swiper navigation to Intro component
- Introduced `audioRef` and `swiperRef` using `useRef` to manage references to the audio element and swiper instance, respectively.
- Implemented `handlePlayCube` function to play or pause the audio and toggle `isPlaying` state. The function also advances the swiper to the next slide if the swiper instance is available.
- Added `swiperRef` to the `Swiper` component for reference management.
- Set `handlePlayCube` as an event handler for the `onClick` event on the `Swiper` component, enabling interactive audio control and slide navigation.

--- a/src/components/intro/Intro.css
+++ b/src/components/intro/Intro.css
@@ -1,10 +1,10 @@
-.swiper {
+.swiper.intro-swiper {
   width: 100vw;
   height: 100vh;
   min-height: 100dvh;
 }
 
-.swiper-slide {
+.swiper-slide.intro-slide {
   background-position: top center;
   background-size: contain;
 }
@@ -20,4 +20,8 @@
     rgba(5, 13, 0, 0.25) 90%,
     rgba(5, 13, 0, 0) 100%
   );
+}
+
+.swiper-cube {
+  overflow: hidden;
 }
