--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -98,7 +98,7 @@ ion-title {
   --ion-color-danger-shade: #ad000d;
   --ion-color-danger-tint: #cb1a27;
 
-  --ion-color-light: #f6f8fc;
+  --ion-color-light: #e1fbeb;
   --ion-color-light-rgb: 246, 248, 252;
   --ion-color-light-contrast: #000000;
   --ion-color-light-contrast-rgb: 0, 0, 0;
@@ -168,7 +168,7 @@ body.dark {
   --ion-color-danger-shade: #ad000d;
   --ion-color-danger-tint: #cb1a27;
 
-  --ion-color-light: #f6f8fc;
+  --ion-color-light: #e1fbeb;
   --ion-color-light-rgb: 246, 248, 252;
   --ion-color-light-contrast: #000000;
   --ion-color-light-contrast-rgb: 0, 0, 0;
