style: Enhanced UI with refactored and improved component ionic styles for more polished and user-friendly interface

--- a/src/theme/global.css
+++ b/src/theme/global.css
@@ -35,8 +35,17 @@ ion-menu::part(backdrop) {
 }
 
 ion-menu::part(container) {
-  border-radius: 0 20px 20px 0;
   box-shadow: 4px 0px 6px rgba(2, 19, 0, 0.842);
+}
+
+@media screen and (max-width: 575px) {
+  ion-menu::part(container) {
+    border-radius: 0 20px 20px 0;
+  }
+}
+
+.menu {
+  --background: url(../assets/images/menu.png) bottom/80% auto no-repeat;
 }
 
 ion-button.btn-gradient {
@@ -66,6 +75,13 @@ ion-button.btn-gradient {
   filter: blur(10px);
   z-index: -1;
   opacity: 0.7;
+}
+
+/* skeleton */
+
+ion-skeleton-text {
+  --background: #357001df;
+  --background-rgb: 53, 112, 1;
 }
 
 /* STAGE */
@@ -171,13 +187,35 @@ ion-button.btn-gradient {
   }
 }
 
+@keyframes colors-game-anim {
+  0% {
+    transform: scale(1);
+  }
+  20% {
+    transform: scaleY(0.95) scaleX(1.05);
+  }
+  48% {
+    transform: scaleY(1.01) scaleX(0.9);
+  }
+  68% {
+    transform: scaleY(0.98) scaleX(1.04);
+  }
+  80% {
+    transform: scaleY(1.02) scaleX(0.98);
+  }
+  97%,
+  100% {
+    transform: scale(1);
+  }
+}
+
 /* TABS */
 
 .custom-fab {
   position: fixed;
   bottom: 5%;
-  left: 50%;
-  transform: translateX(-50%);
+  left: 45%;
+  transform: translateX(-45%);
   z-index: 999999;
 
   display: flex;
@@ -185,18 +223,29 @@ ion-button.btn-gradient {
   justify-content: center;
 
   border-radius: 50%;
-  width: 48px;
-  height: 48px;
+  width: 0;
+  height: 0;
 
-  background-color: var(--ion-background-color);
-  box-shadow: 0 20px 0 10px var(--ion-background-color);
+  background-color: transparent;
 }
 
 .custom-fab ion-fab-button::part(native) {
+  bottom: 5%;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 999999;
+
   background-color: #379d04;
   width: 50px;
   height: 50px;
-  box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.3), 0px 1px 3px 1px rgba(0, 0, 0, 0.15);
+  box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.3), 0px 1px 3px 1px rgba(0, 0, 0, 0.15),
+    0 0 0 5px #ffffff;
+  color: #011605;
+}
+
+.ion-palette-dark .custom-fab ion-fab-button::part(native) {
+  box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.3), 0px 1px 3px 1px rgba(0, 0, 0, 0.15),
+    0 0 0 5px #0c2200;
   color: #011605;
 }
 
