--- a/src/theme/tailwind.css
+++ b/src/theme/tailwind.css
@@ -534,6 +534,9 @@ video {
 .collapse {
   visibility: collapse;
 }
+.fixed {
+  position: fixed;
+}
 .absolute {
   position: absolute;
 }
@@ -546,17 +549,23 @@ video {
 .-top-4 {
   top: -1rem;
 }
+.left-1 {
+  left: 0.25rem;
+}
 .left-1\/2 {
   left: 50%;
 }
 .top-0 {
   top: 0px;
 }
-.left-1 {
-  left: 0.25rem;
-}
 .z-10 {
   z-index: 10;
+}
+.row-span-1 {
+  grid-row: span 1 / span 1;
+}
+.m-0 {
+  margin: 0px;
 }
 .mx-0 {
   margin-left: 0px;
@@ -566,6 +575,17 @@ video {
   margin-top: auto;
   margin-bottom: auto;
 }
+.mx-auto {
+  margin-left: auto;
+  margin-right: auto;
+}
+.my-0 {
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
+.mt-4 {
+  margin-top: 1rem;
+}
 .block {
   display: block;
 }
@@ -574,6 +594,9 @@ video {
 }
 .table {
   display: table;
+}
+.grid {
+  display: grid;
 }
 .contents {
   display: contents;
@@ -587,6 +610,9 @@ video {
 .h-20 {
   height: 5rem;
 }
+.h-28 {
+  height: 7rem;
+}
 .h-40 {
   height: 10rem;
 }
@@ -595,6 +621,12 @@ video {
 }
 .h-screen {
   height: 100vh;
+}
+.h-\[80\%\] {
+  height: 80%;
+}
+.h-11 {
+  height: 2.75rem;
 }
 .max-h-screen {
   max-height: 100vh;
@@ -608,21 +640,33 @@ video {
 .w-14 {
   width: 3.5rem;
 }
+.w-28 {
+  width: 7rem;
+}
 .w-40 {
   width: 10rem;
 }
 .w-full {
   width: 100%;
 }
+.w-20 {
+  width: 5rem;
+}
 .max-w-\[1220px\] {
   max-width: 1220px;
 }
-.-translate-x-1\/2 {
-  --tw-translate-x: -50%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+.max-w-\[800px\] {
+  max-width: 800px;
+}
+.max-w-\[120px\] {
+  max-width: 120px;
 }
 .-translate-x-1 {
   --tw-translate-x: -0.25rem;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+.-translate-x-1\/2 {
+  --tw-translate-x: -50%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 .transform {
@@ -630,6 +674,21 @@ video {
 }
 .resize {
   resize: both;
+}
+.grid-flow-row {
+  grid-auto-flow: row;
+}
+.auto-rows-max {
+  grid-auto-rows: max-content;
+}
+.grid-cols-5 {
+  grid-template-columns: repeat(5, minmax(0, 1fr));
+}
+.grid-rows-3 {
+  grid-template-rows: repeat(3, minmax(0, 1fr));
+}
+.grid-rows-4 {
+  grid-template-rows: repeat(4, minmax(0, 1fr));
 }
 .flex-col {
   flex-direction: column;
@@ -648,6 +707,12 @@ video {
 }
 .gap-4 {
   gap: 1rem;
+}
+.gap-2 {
+  gap: 0.5rem;
+}
+.overflow-hidden {
+  overflow: hidden;
 }
 .bg-\[\#226100\] {
   --tw-bg-opacity: 1;
@@ -676,27 +741,6 @@ video {
   font-size: 3.75rem;
   line-height: 1;
 }
-.text-\[12px\] {
-  font-size: 12px;
-}
-.text-\[14px\] {
-  font-size: 14px;
-}
-.text-\[16px\] {
-  font-size: 16px;
-}
-.text-\[18px\] {
-  font-size: 18px;
-}
-.text-\[24px\] {
-  font-size: 24px;
-}
-.text-\[32px\] {
-  font-size: 32px;
-}
-.text-\[36px\] {
-  font-size: 36px;
-}
 .font-bold {
   font-weight: 700;
 }
@@ -705,27 +749,6 @@ video {
 }
 .italic {
   font-style: italic;
-}
-.leading-\[16px\] {
-  line-height: 16px;
-}
-.leading-\[18px\] {
-  line-height: 18px;
-}
-.leading-\[20px\] {
-  line-height: 20px;
-}
-.leading-\[24px\] {
-  line-height: 24px;
-}
-.leading-\[28px\] {
-  line-height: 28px;
-}
-.leading-\[36px\] {
-  line-height: 36px;
-}
-.leading-\[40px\] {
-  line-height: 40px;
 }
 .text-transparent {
   color: transparent;
@@ -755,11 +778,21 @@ video {
 .filter {
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
-.ease-out {
-  transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
+.transition {
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+.ease-in {
+  transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
 }
 .ease-in-out {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.ease-out {
+  transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
 }
 
 ion-toolbar {
