--- a/src/components/abc/AbcCube.css
+++ b/src/components/abc/AbcCube.css
@@ -1,8 +1,8 @@
 .swiper.swiper-cube {
-  width: 10rem;
-  height: 10rem;
-  min-height: 10rem;
-  min-width: 10rem;
+  width: 100%;
+  height: 100%;
+  min-height: 100%;
+  min-width: 100%;
   padding: 0.5rem;
   cursor: pointer;
 }
