--- a/src/theme/tailwind.css
+++ b/src/theme/tailwind.css
@@ -558,6 +558,15 @@ video {
 .top-0 {
   top: 0px;
 }
+.bottom-0 {
+  bottom: 0px;
+}
+.left-\[80\%\] {
+  left: 80%;
+}
+.top-\[60\%\] {
+  top: 60%;
+}
 .z-10 {
   z-index: 10;
 }
@@ -634,20 +643,23 @@ video {
 .h-screen {
   height: 100vh;
 }
-.h-\[80\%\] {
-  height: 80%;
+.h-36 {
+  height: 9rem;
 }
-.h-\[560px\] {
-  height: 560px;
+.h-auto {
+  height: auto;
 }
-.h-\[460px\] {
-  height: 460px;
+.h-32 {
+  height: 8rem;
+}
+.h-1\/2 {
+  height: 50%;
+}
+.h-1 {
+  height: 0.25rem;
 }
 .max-h-screen {
   max-height: 100vh;
-}
-.max-h-\[80\%\] {
-  max-height: 80%;
 }
 .min-h-screen {
   min-height: 100vh;
@@ -669,6 +681,21 @@ video {
 }
 .w-full {
   width: 100%;
+}
+.w-36 {
+  width: 9rem;
+}
+.w-32 {
+  width: 8rem;
+}
+.w-auto {
+  width: auto;
+}
+.w-1\/2 {
+  width: 50%;
+}
+.w-1 {
+  width: 0.25rem;
 }
 .max-w-\[120px\] {
   max-width: 120px;
@@ -707,6 +734,12 @@ video {
 }
 .grid-cols-5 {
   grid-template-columns: repeat(5, minmax(0, 1fr));
+}
+.grid-cols-4 {
+  grid-template-columns: repeat(4, minmax(0, 1fr));
+}
+.grid-cols-6 {
+  grid-template-columns: repeat(6, minmax(0, 1fr));
 }
 .grid-rows-3 {
   grid-template-rows: repeat(3, minmax(0, 1fr));
@@ -764,14 +797,17 @@ video {
 .object-contain {
   object-fit: contain;
 }
+.object-cover {
+  object-fit: cover;
+}
+.p-2 {
+  padding: 0.5rem;
+}
 .p-4 {
   padding: 1rem;
 }
 .p-6 {
   padding: 1.5rem;
-}
-.p-2 {
-  padding: 0.5rem;
 }
 .text-center {
   text-align: center;
@@ -837,4 +873,18 @@ video {
 ion-toolbar {
   --background: transparent;
   --border-color: transparent;
+}
+
+@media (min-width: 1024px) {
+
+  .lg\:grid-cols-5 {
+    grid-template-columns: repeat(5, minmax(0, 1fr));
+  }
+}
+
+@media (min-width: 1280px) {
+
+  .xl\:grid-cols-6 {
+    grid-template-columns: repeat(6, minmax(0, 1fr));
+  }
 }
