refactor: Streamline styling and adjust grid settings in ColorCardGame and LetterCardGame components
- Updated the `ColorCardGame` and `LetterCardGame` components to enhance UI consistency and interaction:
  - Modified the class names and structure of `IonCard` to use `flex items-center justify-center` for improved alignment and presentation of content.
  - Changed the style properties to standardize the appearance during dragging operations and ensure uniformity across different game cards.
  - Adjusted the `opacity`, `backgroundColor`, `width`, `height`, and `cursor` settings to ensure a coherent user experience during drag interactions.

- Enhanced `IonCardContent` in both components:
  - Applied `ion-no-padding` class to remove default padding and maximize content display area within the cards.
  - Ensured content is centrally aligned and occupies the full available space, improving visual impact and focus on the card images.

- Refactored `LetterBoardGame` layout adjustments:
  - Updated `IonCol` sizing within `IonGrid` to better accommodate the new card dimensions and ensure a balanced grid layout across different device sizes.
  - Sorted matched cards alphabetically before rendering to facilitate easier tracking and comparison by users.
  - Enhanced overall grid structure to display matched cards more effectively, aligning them within a unified grid system for better visual organization.

These changes aim to refine the interactive elements of the game, ensuring a smoother and more visually appealing drag-and-drop experience, while also optimizing the display and organization of game elements within the UI framework.

--- a/src/components/game/main/GameBoard.css
+++ b/src/components/game/main/GameBoard.css
@@ -17,8 +17,10 @@
 
 .ion-palette-dark .color-card.color-game-card,
 .color-game-card,
-.letter-card.letter-game-card,
+.ion-palette-dark .letter-card.letter-game-card,
 .letter-game-card {
+  padding: 4px;
+  aspect-ratio: 1/1;
   border-radius: 1rem;
   box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.3), 0px 1px 3px 1px #3d151596;
   background: radial-gradient(circle at 50% 120%, #ffffff, #d46300c0 10%, #542700f3 80%, #3d1515);
@@ -30,17 +32,11 @@
   width: 100%;
 }
 
-.letter-face {
-  width: 50%;
-  height: 50%;
-}
-
 .back {
   height: 100%;
   width: 100%;
 }
 
-.letter-card .face,
 .color-card .face {
   position: absolute;
   top: 0;
@@ -53,8 +49,9 @@
 }
 
 .letter-card .face {
+  object-fit: contain;
   transform: none;
-  transform: translate(50%, 50%);
+  /* transform: translate(50%, 50%); */
 }
 
 .color-card.color-game-card .face {
