--- a/src/theme/global.css
+++ b/src/theme/global.css
@@ -1,3 +1,14 @@
+body {
+  background: linear-gradient(
+    to top,
+    rgb(1, 3, 0) 50%,
+    rgb(9, 22, 0) 70%,
+    rgb(25, 63, 0) 80%,
+    rgba(48, 125, 0, 0.92) 90%,
+    rgb(251, 255, 0) 100%
+  );
+}
+
 ::-webkit-scrollbar,
 *::-webkit-scrollbar {
   display: none;
@@ -62,6 +73,10 @@ ion-button.btn-gradient {
   --box-shadow: 0 2px 6px 0 #b7ff00;
   text-shadow: 0px 0.5px 0.5px #011605;
   font-weight: 700;
+}
+
+ion-button.btn-transparent {
+  --background: #22610000 !important;
 }
 
 .drop-shadow-gradient::before {
